fix section content border; fix content position to align center

--- a/styles/consultation.css
+++ b/styles/consultation.css
@@ -63,6 +63,7 @@ section > .content {
   width: 100%;
   height: 100%;
   max-width: var(--max-width);
+  background-color: var(--black-wall);
   z-index: 1;
 }
 
@@ -72,7 +73,6 @@ section > .content > .text {
   grid-gap: var(--padding-l);
   width: 100%;
   height: fit-content;
-  background-color: var(--black-wall);
   color: var(--text-color-white);
   padding: var(--padding-l);
 }
@@ -254,9 +254,12 @@ section.team {
   align-items: center;
 }
 
-section.team > .content > .text {
-  border-color: var(--main-color-green);
+section.team > .content {
   background-color: transparent;
+}
+
+section.team > .content > .text {
+  border: 4px solid var(--main-color-green);
   color: var(--text-color-black);
   padding-top: calc(var(--padding-l) * 2);
 }
@@ -294,6 +297,16 @@ section.team > .content > .text > h1 {
   section.signup p {
     font-size: var(--font-size-s) !important;
     line-height: var(--line-height);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  section:nth-child(1) {
+    min-height: 100vh !important;
+  }
+
+  section:nth-child(1) > .content {
+    height: 100vh;
   }
 }
 
